ROX-6995: Fix notification behind modal (stackrox/rox#8086)
(cherry picked from commit 8d91ccdeca51862cfaa92fdb5d81a769c2bbe16c)

--- a/ui/apps/platform/src/app.tw.css
+++ b/ui/apps/platform/src/app.tw.css
@@ -137,9 +137,17 @@ h6 {
 }
 
 .react-modal-overlay {
-    @apply fixed top-0 left-0 w-full h-full !important;
+    @apply fixed top-0 left-0 w-full h-full text-base !important;
     background-color: hsla(225, 41%, 32%, 0.82);
-    z-index: 10000;
+    font-family: Open Sans, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu,
+        Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    z-index: 9000;
+}
+
+.toast-selector {
+    @apply text-base !important;
+    font-family: Open Sans, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu,
+        Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 .pill {
